// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`k api > Snapshot tests > basic usage should match snapshot 1`] = `
"import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    className: [\\"kuma-1119741946\\"].join(\\" \\")
  });
}"
`;

exports[`k api > Snapshot tests > using pseudo elements should match snapshot 1`] = `
"import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    className: [\\"kuma-110275621\\"].join(\\" \\")
  });
}"
`;

exports[`k api > Snapshot tests > using pseudo props should match snapshot 1`] = `
"import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return /*#__PURE__*/React.createElement(\\"span\\", {
    className: [\\"kuma-110275621\\"].join(\\" \\")
  });
}"
`;

exports[`k api > Snapshot tests > using responsive props should match snapshot 1`] = `
"import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return /*#__PURE__*/React.createElement(\\"a\\", {
    className: [\\"kuma-4054065355\\"].join(\\" \\")
  });
}"
`;

exports[`k api > Snapshot tests > using space props should match snapshot 1`] = `
"import React from \\"react\\";
import { k } from '@kuma-ui/core';
function App() {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    className: [\\"kuma-110275621\\"].join(\\" \\")
  });
}"
`;
